Pick literal offloading (#479)
## Overview
Picks the following commits from OSS for offloaded literal feature


3f21f18152863701c607ad9be0f1ce796f03ead0

7a917995ca4000bc4767d40d61c6bbb65e427f65

7989209e15600b56fcf0f4c4a7c9af7bfeab6f3e

2d9c35b06f06a642e526c2f56437dfff55d88f35

792ce1ab21c082c88299da04413d0c348bfae851

fd841bafa5d0db88ab0a0e05861cf127583a0f48


Followup to https://github.com/flyteorg/flyte/pull/5697

## Test Plan
Deploy to dogfood and test the flytekit beta changes 

## Rollout Plan (if applicable)
Enable the flag in dogfood and staging and then to canary and prod

## Upstream Changes
Should this change be upstreamed to OSS (flyteorg/flyte)? If not, please uncheck this box, which is used for auditing. Note, it is the responsibility of each developer to actually upstream their changes. See [this guide](https://unionai.atlassian.net/wiki/spaces/ENG/pages/447610883/Flyte+-+Union+Cloud+Development+Runbook/#When-are-versions-updated%3F).
- [x] To be upstreamed to OSS

## Issue
*TODO: Link Linear issue(s) using [magic words](https://linear.app/docs/github#magic-words). `fixes` will move to merged status, while `ref` will only link the PR.*

## Checklist
* [ ] Added tests
* [ ] Ran a deploy dry run and shared the terraform plan
* [ ] Added logging and metrics
* [ ] Updated [dashboards](https://unionai.grafana.net/dashboards) and [alerts](https://unionai.grafana.net/alerting/list)
* [ ] Updated documentation
